<?xml version="1.0"?>
<package format="2">
  <name>raptors</name>
  <version>0.1.0</version>
  <description>The raptors package</description>

  <maintainer email="bart@example.com">bartbart2003</maintainer>

  <license>BSD</license>

  <author>bartbart2003</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
